added unit tests to increase code coverage